--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Neox, Imagine a place where you can chat, collaborate and communicate with your family and friends in teams"
     />
     <title>Neox</title>
   </head>
